--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "mypage",
+  "homepage": "https://AbirSantra.github.io/Me",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "gh-pages": "^3.2.3",
     "isotope-layout": "^3.0.6",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
@@ -14,6 +16,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
