--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "dotenv": "^16.0.0",
     "gh-pages": "^3.2.3",
     "isotope-layout": "^3.0.6",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-mailchimp-subscribe": "^2.1.3",
     "react-scripts": "4.0.3",
-    "swiper": "^8.0.6",
+    "swiper": "^8.0.7",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
